--- a/angular.json
+++ b/angular.json
@@ -3,5 +3,136 @@
   "version": 1,
   "newProjectRoot": "projects",
   "projects": {
+    "skeleton": {
+      "projectType": "application",
+      "schematics": {
+        "@schematics/angular:component": {
+          "style": "sass"
+        }
+      },
+      "root": "projects/skeleton",
+      "sourceRoot": "projects/skeleton/src",
+      "prefix": "app",
+      "architect": {
+        "build": {
+          "builder": "@angular-devkit/build-angular:browser",
+          "options": {
+            "outputPath": "dist/skeleton",
+            "index": "projects/skeleton/src/index.html",
+            "main": "projects/skeleton/src/main.ts",
+            "polyfills": "projects/skeleton/src/polyfills.ts",
+            "tsConfig": "projects/skeleton/tsconfig.app.json",
+            "inlineStyleLanguage": "sass",
+            "assets": [
+              "projects/skeleton/src/favicon.ico",
+              "projects/skeleton/src/assets"
+            ],
+            "styles": [
+              "projects/skeleton/src/styles.sass"
+            ],
+            "scripts": []
+          },
+          "configurations": {
+            "production": {
+              "budgets": [
+                {
+                  "type": "initial",
+                  "maximumWarning": "500kb",
+                  "maximumError": "1mb"
+                },
+                {
+                  "type": "anyComponentStyle",
+                  "maximumWarning": "2kb",
+                  "maximumError": "4kb"
+                }
+              ],
+              "fileReplacements": [
+                {
+                  "replace": "projects/skeleton/src/environments/environment.ts",
+                  "with": "projects/skeleton/src/environments/environment.prod.ts"
+                }
+              ],
+              "outputHashing": "all"
+            },
+            "development": {
+              "buildOptimizer": false,
+              "optimization": false,
+              "vendorChunk": true,
+              "extractLicenses": false,
+              "sourceMap": true,
+              "namedChunks": true
+            }
+          },
+          "defaultConfiguration": "production"
+        },
+        "serve": {
+          "builder": "@angular-devkit/build-angular:dev-server",
+          "configurations": {
+            "production": {
+              "browserTarget": "skeleton:build:production"
+            },
+            "development": {
+              "browserTarget": "skeleton:build:development"
+            }
+          },
+          "defaultConfiguration": "development"
+        },
+        "extract-i18n": {
+          "builder": "@angular-devkit/build-angular:extract-i18n",
+          "options": {
+            "browserTarget": "skeleton:build"
+          }
+        },
+        "test": {
+          "builder": "@angular-devkit/build-angular:karma",
+          "options": {
+            "main": "projects/skeleton/src/test.ts",
+            "polyfills": "projects/skeleton/src/polyfills.ts",
+            "tsConfig": "projects/skeleton/tsconfig.spec.json",
+            "karmaConfig": "projects/skeleton/karma.conf.js",
+            "inlineStyleLanguage": "sass",
+            "assets": [
+              "projects/skeleton/src/favicon.ico",
+              "projects/skeleton/src/assets"
+            ],
+            "styles": [
+              "projects/skeleton/src/styles.sass"
+            ],
+            "scripts": []
+          }
+        }
+      }
+    },
+    "starter-lib": {
+      "projectType": "library",
+      "root": "projects/starter-lib",
+      "sourceRoot": "projects/starter-lib/src",
+      "prefix": "lib",
+      "architect": {
+        "build": {
+          "builder": "@angular-devkit/build-angular:ng-packagr",
+          "options": {
+            "project": "projects/starter-lib/ng-package.json"
+          },
+          "configurations": {
+            "production": {
+              "tsConfig": "projects/starter-lib/tsconfig.lib.prod.json"
+            },
+            "development": {
+              "tsConfig": "projects/starter-lib/tsconfig.lib.json"
+            }
+          },
+          "defaultConfiguration": "production"
+        },
+        "test": {
+          "builder": "@angular-devkit/build-angular:karma",
+          "options": {
+            "main": "projects/starter-lib/src/test.ts",
+            "tsConfig": "projects/starter-lib/tsconfig.spec.json",
+            "karmaConfig": "projects/starter-lib/karma.conf.js"
+          }
+        }
+      }
+    }
   }
 }
