--- a/tsconfig.json
+++ b/tsconfig.json
@@ -17,6 +17,11 @@
     "moduleResolution": "node",
     "importHelpers": true,
     "target": "es2020",
+    "paths": {
+      "starter-lib": [
+        "dist/starter-lib"
+      ]
+    },
     "module": "es2020",
     "lib": [
       "es2020",
