--- a/angular.json
+++ b/angular.json
@@ -28,7 +28,10 @@
               "projects/skeleton/src/assets"
             ],
             "styles": [
-              "projects/skeleton/src/styles.sass"
+              "projects/skeleton/src/styles/app/styles.scss",
+              "node_modules/primeng/resources/themes/bootstrap4-light-blue/theme.css",
+              "node_modules/primeng/resources/primeng.min.css",
+              "node_modules/primeicons/primeicons.css"
             ],
             "scripts": []
           },
