--- a/angular.json
+++ b/angular.json
@@ -7,7 +7,7 @@
       "projectType": "application",
       "schematics": {
         "@schematics/angular:component": {
-          "style": "sass"
+          "style": "scss"
         }
       },
       "root": "projects/skeleton",
@@ -28,7 +28,8 @@
               "projects/skeleton/src/assets"
             ],
             "styles": [
-              "projects/skeleton/src/styles/app/styles.scss",
+              "projects/skeleton/src/styles/styles.scss",
+              "projects/starter-lib/src/lib/styles/app/styles.scss",
               "node_modules/primeng/resources/themes/bootstrap4-light-blue/theme.css",
               "node_modules/primeng/resources/primeng.min.css",
               "node_modules/primeicons/primeicons.css"
@@ -115,8 +116,7 @@
         "build": {
           "builder": "@angular-devkit/build-angular:ng-packagr",
           "options": {
-            "project": "projects/starter-lib/ng-package.json"
-          },
+            "project": "projects/starter-lib/ng-package.json"          },
           "configurations": {
             "production": {
               "tsConfig": "projects/starter-lib/tsconfig.lib.prod.json"
