--- a/.eslintrc.json
+++ b/.eslintrc.json
@@ -1,18 +1,51 @@
 {
-  "extends": "eslint:recommended",
-  "rules": {
-    // enable additional rules
-    "indent": [2, "tab"],
-    "linebreak-style": ["error", "unix"],
-    "quotes": ["error", "double"],
-    "semi": ["error", "always"],
-    "comma-dangle": ["error", "never"],
+  "root": true,
+  "overrides": [{
+    "files": ["*.ts", "*.js"],
+    "parserOptions": {
+      "project": ["tsconfig.json"],
+      "createDefaultProgram": true
+    },
+    "extends": [
+      "plugin:@angular-eslint/recommended",
+      "plugin:@angular-eslint/template/process-inline-templates",
+      "prettier"
+    ],
+    "rules": {
+      // enable additional rules
+      "indent": [2, "tab"],
+      "linebreak-style": ["error", "unix"],
+      "quotes": ["warn", "double"],
+      "semi": ["error", "always"],
+			"comma-dangle": ["error", {
+        "arrays": "only-multiline",
+        "objects": "only-multiline",
+        "imports": "never",
+        "exports": "never",
+        "functions": "only-multiline"
+    	}],
 
-    // override configuration set by extending "eslint:recommended"
-    "no-empty": "warn",
-    "no-cond-assign": ["error", "always"],
+      // override configuration set by extending "eslint:recommended"
+      "no-empty": "warn",
+      "no-cond-assign": ["error", "always"],
 
-    // disable rules from base configurations
-    "for-direction": "off"
-  }
+      // disable rules from base configurations
+      "for-direction": "off",
+      "no-empty-function": "off",
+      "@typescript-eslint/no-empty-function": "off",
+      "@angular-eslint/no-empty-lifecycle-method": "off",
+      "@typescript-eslint/explicit-function-return-type": "warn",
+      "@angular-eslint/template/eqeqeq": "off"
+  	}
+
+  },
+	{
+		"files": ["*.html"],
+		"extends": ["plugin:@angular-eslint/template/recommended"],
+		"rules": {
+			"@angular-eslint/template/eqeqeq": "off"
+		}
+	}
+
+  ]
 }
