--- a/.gitignore
+++ b/.gitignore
@@ -38,6 +38,8 @@ yarn-error.log
 /libpeerconnection.log
 testem.log
 /typings
+/dependency-check-bin
+/dependency-check-reports
 
 # System files
 .DS_Store
