--- a/.eslintrc.json
+++ b/.eslintrc.json
@@ -20,7 +20,7 @@
 			"comma-dangle": ["error", {
         "arrays": "only-multiline",
         "objects": "only-multiline",
-        "imports": "never",
+        "imports": "only-multiline",
         "exports": "never",
         "functions": "only-multiline"
     	}],
