--- a/.eslintrc.json
+++ b/.eslintrc.json
@@ -44,8 +44,10 @@
 		"files": ["*.html"],
 		"extends": ["plugin:@angular-eslint/template/recommended"],
 		"rules": {
-			"@angular-eslint/template/eqeqeq": "off"
+			"@angular-eslint/template/eqeqeq": "off",
+			"indent": [2, "tab"]
 		}
+
 	}
 
   ]
