--- a/package.json
+++ b/package.json
@@ -32,6 +32,7 @@
     "eslint-config-prettier": "^8.5.0",
     "prettier": "^2.7.1",
     "prettier-eslint": "^15.0.1",
+    "primeflex": "^3.3.0",
     "primeng": "^14.0.2",
     "rxjs": "~7.5.0",
     "tslib": "^2.3.0",
