--- a/.eslintrc.json
+++ b/.eslintrc.json
@@ -13,7 +13,7 @@
     ],
     "rules": {
       // enable additional rules
-      "indent": [2, "tab"],
+      "indent": ["error", "tab", {"SwitchCase": 1}],
       "linebreak-style": ["error", "unix"],
       "quotes": ["warn", "double"],
       "semi": ["error", "always"],
@@ -23,7 +23,7 @@
         "imports": "only-multiline",
         "exports": "never",
         "functions": "only-multiline"
-    	}],
+    }],
 
       // override configuration set by extending "eslint:recommended"
       "no-empty": "warn",
@@ -37,7 +37,7 @@
       "@typescript-eslint/explicit-function-return-type": "warn",
       "@angular-eslint/template/eqeqeq": "off",
 			"@angular-eslint/no-output-on-prefix": "off"
-  	}
+  }
 
   },
 	{
