--- a/angular.json
+++ b/angular.json
@@ -71,6 +71,9 @@
         },
         "serve": {
           "builder": "@angular-devkit/build-angular:dev-server",
+					"options": {
+            "port": 4201
+          },
           "configurations": {
             "production": {
               "browserTarget": "skeleton:build:production"
